tests/diagnostics_golden/diag_anonymous_access_reassign_join.txt
Diagnostics Golden: Removed Allocator
Source: tests/negative/neg_own_anon_reassign_join.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_anon_reassign_join.safe:11:14: error: removed source construct `new` is not allowed
  |
  | 11 |       return new ((value = 1) as data)
  |    |              ^~~
  |
  note: PR11.8e removes explicit allocation from the source surface
------------------------------------------------------------------------
